#pragma once
class Alimento
{
private:
    int scord;

public:
    Alimento() {}
    ~Alimento() {}
};