#pragma once
class Bomba
{
private:
    
public:
    Bomba() {}
    void Inflar();
    ~Bomba() {}
};