#pragma once
class DigDug
{
private:
    /* data */
public:
    DigDug(/* args */) {}
    ~DigDug() {}
};
