#pragma once
class Fruta
{
private:
    int scord;

public:
    Fruta(/* args */) {}
    ~Fruta() {}
};