#pragma once
class Fygars
{
private:
    /* data */
public:
    Fygars(/* args */) {}
    void Matar()
    {
    }
    ~Fygars() {}
};