#pragma once
class Interfa
{
private:
    /* data */
public:
    Interfa(/* args */) {}
    ~Interfa() {}
};