#pragma once
class Jugador
{
private:
    /* data */
public:
    Jugador(/* args */) {}
    ~Jugador() {}
};