#pragma once
class Pala
{
private:
    /* data */
public:
    Pala(/* args */) {}
    void Cavar()
    {
        }
    ~Pala() {}
};