#pragma once
class Pookas
{
private:
    /* data */
public:
    Pookas(/* args */) {}
    ~Pookas() {}
};