#pragma once
 class Roca
{
private:
    /* data */
public:
    Roca(/* args */) {}
    ~Roca() {}
};