#pragma once
class Scord
{
private:
    /* data */
public:
    Scord(/* args */) {}
    ~Scord() {}
};