#pragma once 
class Tierra
{
private:
    /* data */
public:
    Tierra(/* args */) {}
    ~Tierra() {}
};