#pragma once
class Tunel
{
private:
    /* data */
public:
    Tunel(/* args */) {}
    ~Tunel() {}
};