#pragma once
class Verdura
{
private:
    /* data */
public:
    Verdura(/* args */) {}
    ~Verdura() {}
};